# rust_blogger

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: deploy.yml
migrations/2021-04-19-165504_rust_blogger/: down.sql  up.sql
src/: main.rs
src/bundle/content/css/site/: dark.css  site.css
src/bundle/script/: editor.js  login.js  navbar.js  posts.js  signup.js  site.js  users.js
src/controller/: account.rs  admin.rs  error.rs  home.rs  mod.rs  posts.rs
src/model/: comment.rs  mod.rs  post.rs  post_category.rs  post_group.rs  schema.rs  site_user.rs  site_user_status.rs
src/utility/: db_context.rs  mod.rs  toolkit.rs
src/view/: contact.html  editor.html  git.html  home.html  layout.html  post_template.html  users.html
src/view/error/: forbidden.html  not_found.html  oof.html  unavailable.html
src/view/partial/: login.html  navbar.html  signup.html
