[package]
name = "rust_blogger"
version = "0.1.0"
authors = ["inatos <32039018+inatos@users.noreply.github.com>"]
edition = "2018"
build = "./build.rs"

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-session = "0.4.1"
actix-utils = "3.0.0"
actix-web-static-files = "3.0.5"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
pwhash = "1"
r2d2 = "0.8.9"
regex = "1.4.5"
serde = "1.0.125"
serde_json = "1.0.64"
serde_with = "1.9.0"
tera = "1.7.0"

[build-dependencies]
actix-web-static-files = "3.0.5"